syntax = "proto3";
package pb;


import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";

option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.marshaler_all) = true;

service BeTest {
    rpc Version(VersionRequest) returns (VersionResponse) {
        option (google.api.http) = {
            get: "/version",
        };
    }

    rpc Sum(SumRequest) returns (SumResponse) {
        option (google.api.http) = {
            post: "/sum",
        };
    }
}

message VersionRequest {
}

message VersionResponse {
    string version = 1;
}

message SumRequest {
    int32 a = 1;
    int32 b = 2;
}

message SumResponse {
    int32 sum = 1;
}